Align notebooks with eoepca release v1.4

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -39,11 +39,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_domain = \"demo.eoepca.org\"\n",
-    "#base_domain = \"develop.eoepca.org\"\n",
-    "#base_domain = \"185.52.193.87.nip.io\"\n",
-    "workspace_prefix = \"demo-user\"\n",
-    "#workspace_prefix = \"user\""
+    "# base_domain = \"192-168-49-2.nip.io\"\n",
+    "base_domain = \"develop.eoepca.org\"\n",
+    "workspaces_endpoint = f'https://workspace-api.{base_domain}/workspaces'\n",
+    "workspace_prefix = \"ws\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "324a498a-3beb-48ca-955e-dbb078a16425",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#-------------------------------------------------------------------------------\n",
+    "# Helper function to authenticate user and get access token\n",
+    "#-------------------------------------------------------------------------------\n",
+    "import requests\n",
+    "\n",
+    "realm = \"master\"\n",
+    "keycloak = f\"https://keycloak.{base_domain}\"\n",
+    "token_endpoint = f\"{keycloak}/realms/{realm}/protocol/openid-connect/token\"\n",
+    "client_id = \"admin-cli\"\n",
+    "client_secret = \"changeme\"\n",
+    "\n",
+    "def get_user_token(username, password):\n",
+    "    headers = {\n",
+    "        \"Cache-Control\": \"no-cache\",\n",
+    "        \"Content-Type\": \"application/x-www-form-urlencoded\"\n",
+    "    }\n",
+    "    data = {\n",
+    "        \"scope\": \"openid profile email\",\n",
+    "        \"grant_type\": \"password\",\n",
+    "        \"username\": username,\n",
+    "        \"password\": password,\n",
+    "        \"client_id\": client_id,\n",
+    "        \"client_secret\": client_secret\n",
+    "    }\n",
+    "    response = requests.post(token_endpoint, headers=headers, data=data)\n",
+    "    if response.ok:\n",
+    "        return response.json()[\"access_token\"]\n",
+    "    else:\n",
+    "        return None"
    ]
   },
   {
@@ -187,7 +224,8 @@
    "source": [
     "#bbox_query = BBox([37.8, 23.4, 38.8, 24.5])\n",
     "#bbox_query = BBox([39.66, 19.82, 40.64, 21.11])\n",
-    "bbox_query = BBox([37, 13.9, 37.9, 15.1])"
+    "# bbox_query = BBox([37, 13.9, 37.9, 15.1])\n",
+    "bbox_query = BBox([47.7, 14.9, 48.7, 16.4])"
    ]
   },
   {
@@ -353,7 +391,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "anytext_query = PropertyIsEqualTo('csw:AnyText', 'Orthoimagery')"
+    "# anytext_query = PropertyIsEqualTo('csw:AnyText', 'Orthoimagery')\n",
+    "anytext_query = PropertyIsEqualTo('csw:AnyText', 'MSI')"
    ]
   },
   {
@@ -554,7 +593,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m = folium.Map(location=[38, 20], zoom_start=6, tiles='OpenStreetMap')\n",
+    "centre_x = float(rec.bbox.minx) + ((float(rec.bbox.maxx) - float(rec.bbox.minx))/2)\n",
+    "centre_y = float(rec.bbox.miny) + ((float(rec.bbox.maxy) - float(rec.bbox.miny))/2)\n",
+    "m = folium.Map(location=[centre_y, centre_x], zoom_start=10, tiles='OpenStreetMap')\n",
     "folium.Rectangle(bounds=[[float(rec.bbox.miny), float(rec.bbox.minx)], [float(rec.bbox.maxy), float(rec.bbox.maxx)]]).add_to(m)\n",
     "m"
    ]
@@ -565,6 +606,14 @@
    "metadata": {},
    "source": [
     "### System Catalogue Discovery through Federated Search"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86719c61-124d-4729-98a1-94281a77ee08",
+   "metadata": {},
+   "source": [
+    "<span style=\"color:red;\">**_THIS SECTION IS DISABLED, AS THE MUNDI CATALOGUE IS NO LONGER AVAILABLE_**<span>"
    ]
   },
   {
@@ -582,9 +631,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csw_url = 'https://resource-catalogue.mundi.eoepca.org/csw'\n",
-    "# pycsw instance configured with \n",
-    "# federatedcatalogues=https://sentinel2.browse.catalog.mundiwebservices.com/csw"
+    "# csw_url = 'https://resource-catalogue.mundi.eoepca.org/csw'\n",
+    "# # pycsw instance configured with \n",
+    "# # federatedcatalogues=https://sentinel2.browse.catalog.mundiwebservices.com/csw"
    ]
   },
   {
@@ -594,14 +643,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xml = b'''<?xml version=\"1.0\" encoding=\"ISO-8859-1\" standalone=\"no\"?>\n",
-    "<csw:GetRecords xmlns:csw=\"http://www.opengis.net/cat/csw/2.0.2\" xmlns:ogc=\"http://www.opengis.net/ogc\" service=\"CSW\" version=\"2.0.2\" resultType=\"results\" startPosition=\"1\" maxRecords=\"5\" outputFormat=\"application/xml\" outputSchema=\"http://www.opengis.net/cat/csw/2.0.2\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xsi:schemaLocation=\"http://www.opengis.net/cat/csw/2.0.2 http://schemas.opengis.net/csw/2.0.2/CSW-discovery.xsd\">\n",
-    "\t<csw:DistributedSearch hopCount=\"2\"/>\n",
-    "\t<csw:Query typeNames=\"csw:Record\">\n",
-    "\t\t<csw:ElementSetName>brief</csw:ElementSetName>\n",
-    "\t</csw:Query>\n",
-    "</csw:GetRecords>\n",
-    "'''"
+    "# xml = b'''<?xml version=\"1.0\" encoding=\"ISO-8859-1\" standalone=\"no\"?>\n",
+    "# <csw:GetRecords xmlns:csw=\"http://www.opengis.net/cat/csw/2.0.2\" xmlns:ogc=\"http://www.opengis.net/ogc\" service=\"CSW\" version=\"2.0.2\" resultType=\"results\" startPosition=\"1\" maxRecords=\"5\" outputFormat=\"application/xml\" outputSchema=\"http://www.opengis.net/cat/csw/2.0.2\" xmlns:xsi=\"http://www.w3.org/2001/XMLSchema-instance\" xsi:schemaLocation=\"http://www.opengis.net/cat/csw/2.0.2 http://schemas.opengis.net/csw/2.0.2/CSW-discovery.xsd\">\n",
+    "# \t<csw:DistributedSearch hopCount=\"2\"/>\n",
+    "# \t<csw:Query typeNames=\"csw:Record\">\n",
+    "# \t\t<csw:ElementSetName>brief</csw:ElementSetName>\n",
+    "# \t</csw:Query>\n",
+    "# </csw:GetRecords>\n",
+    "# '''"
    ]
   },
   {
@@ -611,7 +660,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csw = CatalogueServiceWeb(csw_url)"
+    "# csw = CatalogueServiceWeb(csw_url)"
    ]
   },
   {
@@ -621,7 +670,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "csw.getrecords(xml=xml)"
+    "# csw.getrecords(xml=xml)"
    ]
   },
   {
@@ -631,7 +680,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(csw.results)"
+    "# print(csw.results)"
    ]
   },
   {
@@ -641,8 +690,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for record in csw.records:\n",
-    "    print(csw.records[record].title)"
+    "# for record in csw.records:\n",
+    "#     print(csw.records[record].title)"
    ]
   },
   {
@@ -659,30 +708,6 @@
    "metadata": {},
    "source": [
     "In this part of the demo, the user will use the workspace resource catalogue endpoint to discover processing outputs and applications.  The workspace catalogue is local to the user, which also has federated access to the system catalogue."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "189d1f9d-6abe-405e-a652-d2f73a748239",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "We now instantiate a client to interact with the platform.<br>\n",
-    "The client dynamically registers with the Authorization Server to take part in UMA (User Managed Access) flows through which authorization is obtained for scoped access resources on behalf of the user."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7f997cbd-b8d5-4e7d-bfee-d12ae92602ab",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import utils.DemoClient as client\n",
-    "demo = client.DemoClient(f\"https://auth.{base_domain}\")\n",
-    "demo.register_client()\n",
-    "demo.save_state()"
    ]
   },
   {
@@ -705,8 +730,32 @@
     "# Authenticate as user 'alice' and get ID Token\n",
     "#-------------------------------------------------------------------------------\n",
     "USER_ALICE=\"alice\"\n",
-    "USER_ALICE_PASSWORD=\"defaultPWD\"\n",
-    "alice_id_token = demo.get_id_token(USER_ALICE, USER_ALICE_PASSWORD)"
+    "USER_ALICE_PASSWORD=\"changeme\"\n",
+    "alice_access_token = get_user_token(USER_ALICE, USER_ALICE_PASSWORD)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb53e560-3c9f-4165-ac60-0ab2ed9c25dc",
+   "metadata": {},
+   "source": [
+    "We can retrieve the details of the user's workspace:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "edacb759-be51-417b-a4b5-db04a012f261",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.get(f\"{workspaces_endpoint}/{workspace_prefix}-{USER_ALICE}\", headers=headers)\n",
+    "response.raise_for_status()\n",
+    "\n",
+    "workspace_data = response.json()\n",
+    "bucket_name = workspace_data[\"storage\"][\"credentials\"][\"bucketname\"]\n",
+    "s3_access = workspace_data[\"storage\"][\"credentials\"][\"access\"]\n",
+    "s3_secret = workspace_data[\"storage\"][\"credentials\"][\"secret\"]"
    ]
   },
   {
@@ -721,14 +770,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fc2e4a2b-3151-413b-a15d-342d14171d35",
+   "metadata": {},
+   "source": [
+    "We will first upload an application package to the user's workspace:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25978f4c-5fe7-4248-ab01-501a3347cc56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import boto3\n",
+    "S3_ENDPOINT = \"https://minio.develop.eoepca.org\"\n",
+    "session = boto3.session.Session()\n",
+    "s3resource = session.resource('s3', aws_access_key_id=s3_access, aws_secret_access_key=s3_secret, endpoint_url=S3_ENDPOINT)\n",
+    "object = s3resource.Object(bucket_name, 'application-package/s-expression/s-expression-0_0_2.cwl')\n",
+    "result = object.put(Body=open('../data/s-expression-cwl.cwl', 'rb'))\n",
+    "res = result.get('ResponseMetadata')\n",
+    "if res.get('HTTPStatusCode') == 200:\n",
+    "    print('Application package uploaded successfully')\n",
+    "else:\n",
+    "    print('Application package not uploaded')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "adbfde85-8323-4729-9daf-90de2f13ef20",
+   "metadata": {},
+   "source": [
+    "Now we register the application package:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cbfba517-4c51-46aa-9990-09953aab67ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resource_url= f'{bucket_name}/application-package/s-expression/s-expression-0_0_2.cwl'\n",
+    "response = requests.post(\n",
+    "    f\"{workspaces_endpoint}/{workspace_prefix}-{USER_ALICE}/register\",\n",
+    "    headers=headers,\n",
+    "    json={\n",
+    "        \"type\": \"application\",\n",
+    "        \"url\": resource_url,\n",
+    "    }\n",
+    ")\n",
+    "response.raise_for_status()\n",
+    "response"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "c4b3ed80-d735-4d0e-bdf4-aab5ac197928",
    "metadata": {},
    "outputs": [],
    "source": [
-    "app_id = \"nhi\"\n",
-    "app_version = \"0_0_3\"\n",
+    "app_id = \"s-expression\"\n",
+    "app_version = \"0_0_2\"\n",
     "application_name = f\"{app_id}-{app_version}\""
    ]
   },
@@ -748,7 +853,7 @@
    "outputs": [],
    "source": [
     "headers = {\n",
-    "    'Authorization': 'Bearer ' + alice_id_token\n",
+    "    'Authorization': 'Bearer ' + alice_access_token\n",
     "}"
    ]
   },
@@ -854,8 +959,8 @@
     "# Authenticate as user 'bob' and get ID Token\n",
     "#-------------------------------------------------------------------------------\n",
     "USER_ERIC=\"eric\"\n",
-    "USER_ERIC_PASSWORD=\"defaultPWD\"\n",
-    "eric_id_token = demo.get_id_token(USER_ERIC, USER_ERIC_PASSWORD)"
+    "USER_ERIC_PASSWORD=\"changeme\"\n",
+    "eric_access_token = get_user_token(USER_ERIC, USER_ERIC_PASSWORD)"
    ]
   },
   {
@@ -874,7 +979,7 @@
    "outputs": [],
    "source": [
     "headers = {\n",
-    "    'Authorization': 'Bearer ' + eric_id_token\n",
+    "    'Authorization': 'Bearer ' + eric_access_token\n",
     "}"
    ]
   },
@@ -910,16 +1015,6 @@
     "for rec in csw.records:\n",
     "    print(f'identifier: {csw.records[rec].identifier}\\ntype: {csw.records[rec].type}\\ntitle: {csw.records[rec].title}\\n')\n",
     "csw.records[rec].references"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bb6df62f-7c4c-4029-b5f8-552c656f8c74",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "csw.records['s-expression'].references"
    ]
   },
   {
@@ -1652,9 +1747,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_domain = \"demo.eoepca.org\"\n",
-    "# base_domain = \"develop.eoepca.org\"\n",
-    "registration_endpoint = f'https://registration-api-open.{base_domain}'"
+    "base_domain = \"develop.eoepca.org\"\n",
+    "registration_endpoint = f'https://registration-api.{base_domain}'"
    ]
   },
   {
@@ -2166,8 +2260,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_domain = \"demo.eoepca.org\"\n",
-    "system_catalogue_endpoint = f'https://resource-catalogue.{base_domain}'"
+    "base_domain = \"develop.eoepca.org\"\n",
+    "system_catalogue_endpoint = f'https://resource-catalogue.{base_domain}/stac'"
    ]
   },
   {
@@ -2280,7 +2374,7 @@
    "outputs": [],
    "source": [
     "mysearch = catalog.search(collections=['metadata:main'], max_items=10)\n",
-    "#print(f\"{mysearch.matched()} items found\")"
+    "print(f\"{mysearch.matched()} items found\")"
    ]
   },
   {
@@ -2298,7 +2392,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mysearch = catalog.search(collections=['metadata:main'], bbox=[13.9,37,15.1,37.9], max_items=10)\n",
+    "mysearch = catalog.search(collections=['metadata:main'], bbox=[14.9,47.7,16.4,48.7], max_items=10)\n",
     "#mysearch = catalog.search(collections=['metadata:main'], bbox=[-72.5,40.5,-72,41], max_items=10)\n",
     "print(f\"{mysearch.matched()} items found\")"
    ]
@@ -2463,7 +2557,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_catalogue_cql_text_query['features'][1]['properties']['title']"
+    "my_catalogue_cql_text_query['features'][0]['properties']['title']"
    ]
   },
   {
@@ -2473,7 +2567,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "my_catalogue_cql_text_query['features'][1]"
+    "my_catalogue_cql_text_query['features'][0]"
    ]
   },
   {
@@ -2659,14 +2753,6 @@
    "source": [
     "![Metadata preview](img/Screenshot_QGIS_11.png)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b273e78d-0980-40aa-9eab-9a5c4e0ce371",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
