--- a/demoroot/notebooks/06 Workspace Management.ipynb
+++ b/demoroot/notebooks/06 Workspace Management.ipynb
@@ -24,7 +24,8 @@
    "outputs": [],
    "source": [
     "import requests\n",
-    "import datetime"
+    "import datetime\n",
+    "import jwt"
    ]
   },
   {
@@ -34,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_domain = \"demo.eoepca.org\"\n",
+    "base_domain = \"develop.eoepca.org\"\n",
     "# base_domain = \"develop.eoepca.org\"\n",
     "#workspaces_endpoint = f'https://workspace-api-open.{base_domain}/workspaces'\n",
     "workspaces_endpoint = f'https://workspace-api.{base_domain}/workspaces'"
@@ -51,17 +52,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8949fe0-b1f6-433f-bf64-61be535b6d48",
+   "id": "2abbbf90-9d97-4d94-99e8-c042e8158b78",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import utils.DemoClient as client\n",
-    "import jwt\n",
+    "#-------------------------------------------------------------------------------\n",
+    "# Helper function to authenticate user and get access token\n",
+    "#-------------------------------------------------------------------------------\n",
+    "import requests\n",
     "\n",
-    "demo = client.DemoClient(f\"https://auth.{base_domain}\")\n",
-    "#demo = client.DemoClient(f\"https://auth.{base_domain}\")\n",
-    "demo.register_client()\n",
-    "demo.save_state()"
+    "realm = \"master\"\n",
+    "keycloak = f\"https://keycloak.{base_domain}\"\n",
+    "token_endpoint = f\"{keycloak}/realms/{realm}/protocol/openid-connect/token\"\n",
+    "client_id = \"admin-cli\"\n",
+    "client_secret = \"changeme\"\n",
+    "\n",
+    "def get_user_token(username, password):\n",
+    "    headers = {\n",
+    "        \"Cache-Control\": \"no-cache\",\n",
+    "        \"Content-Type\": \"application/x-www-form-urlencoded\"\n",
+    "    }\n",
+    "    data = {\n",
+    "        \"scope\": \"openid profile email\",\n",
+    "        \"grant_type\": \"password\",\n",
+    "        \"username\": username,\n",
+    "        \"password\": password,\n",
+    "        \"client_id\": client_id,\n",
+    "        \"client_secret\": client_secret\n",
+    "    }\n",
+    "    response = requests.post(token_endpoint, headers=headers, data=data)\n",
+    "    if response.ok:\n",
+    "        return response.json()[\"access_token\"]\n",
+    "    else:\n",
+    "        return None"
    ]
   },
   {
@@ -72,14 +95,14 @@
    "outputs": [],
    "source": [
     "USER_ERIC=\"eric\"\n",
-    "USER_ERIC_PASSWORD=\"defaultPWD\"\n",
-    "eric_id_token = demo.get_id_token(USER_ERIC, USER_ERIC_PASSWORD)\n",
+    "USER_ERIC_PASSWORD=\"changeme\"\n",
+    "eric_access_token = get_user_token(USER_ERIC, USER_ERIC_PASSWORD)\n",
     "headers = {\n",
-    "    'Authorization': 'Bearer ' + eric_id_token\n",
+    "    'Authorization': 'Bearer ' + eric_access_token\n",
     "}\n",
     "\n",
-    "jwt_header = jwt.get_unverified_header(eric_id_token)\n",
-    "jwt_payload = jwt.decode(eric_id_token, options={\"verify_signature\": False})\n",
+    "jwt_header = jwt.get_unverified_header(eric_access_token)\n",
+    "jwt_payload = jwt.decode(eric_access_token, options={\"verify_signature\": False})\n",
     "eric_uid = jwt_payload[\"sub\"]"
    ]
   },
@@ -91,14 +114,14 @@
    "outputs": [],
    "source": [
     "USER_ADMIN=\"admin\"\n",
-    "USER_ADMIN_PASSWORD=\"admin_Abcd1234#\"\n",
-    "admin_id_token = demo.get_id_token(USER_ADMIN, USER_ADMIN_PASSWORD)\n",
+    "USER_ADMIN_PASSWORD=\"changeme\"\n",
+    "admin_access_token = get_user_token(USER_ADMIN, USER_ADMIN_PASSWORD)\n",
     "headers = {\n",
-    "    'Authorization': 'Bearer ' + admin_id_token\n",
+    "    'Authorization': 'Bearer ' + admin_access_token\n",
     "}\n",
     "\n",
-    "jwt_header = jwt.get_unverified_header(admin_id_token)\n",
-    "jwt_payload = jwt.decode(admin_id_token, options={\"verify_signature\": False})\n",
+    "jwt_header = jwt.get_unverified_header(admin_access_token)\n",
+    "jwt_payload = jwt.decode(admin_access_token, options={\"verify_signature\": False})\n",
     "admin_uid = jwt_payload[\"sub\"]"
    ]
   },
@@ -470,7 +493,7 @@
    "source": [
     "import boto3\n",
     "#S3_ENDPOINT = \"https://cf2.cloudferro.com:8080\"\n",
-    "S3_ENDPOINT = \"https://minio.demo.eoepca.org\"\n",
+    "S3_ENDPOINT = \"https://minio.develop.eoepca.org\"\n",
     "session = boto3.session.Session()\n",
     "s3resource = session.resource('s3', aws_access_key_id=s3_access, aws_secret_access_key=s3_secret, endpoint_url=S3_ENDPOINT)\n",
     "object = s3resource.Object(bucket_name, 'application-package/s-expression/s-expression-0_0_2.cwl')\n",
