--- a/demoroot/notebooks/05 Data Access.ipynb
+++ b/demoroot/notebooks/05 Data Access.ipynb
@@ -55,11 +55,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_domain = \"demo.eoepca.org\"\n",
-    "#base_domain = \"develop.eoepca.org\"\n",
-    "#base_domain = \"185.52.193.87.nip.io\"\n",
-    "workspace_prefix = \"demo-user\"\n",
-    "#workspace_prefix = \"user\"\n",
+    "base_domain = \"develop.eoepca.org\"\n",
+    "workspace_prefix = \"ws\"\n",
     "system_endpoint = f'https://resource-catalogue.{base_domain}/csw'"
    ]
   },
@@ -80,11 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#scene_id='S2B_MSIL2A_20200902T090559_N0214_R050_T34SGH_20200902T113910.SAFE'\n",
-    "# scene_id='S2B_MSIL1C_20210402T095029_N0300_R079_T33SVB_20210402T121737.SAFE'\n",
-    "# scene_id=\"S2B_MSIL2A_20190912T084559_N0213_R107_T36UXA_20190912T122242.SAFE\"\n",
-    "scene_id=\"S2B_MSIL2A_20190911T092029_N0213_R093_T34SFG_20190911T135255.SAFE\"\n",
-    "#scene_id='S2B_MSIL1C_20210402T095029_R079_T33UXQ_20210402T121737'"
+    "scene_id=\"S2B_MSIL2A_20190910T095029_N0500_R079_T33TXN_20230430T083712.SAFE\""
    ]
   },
   {
@@ -406,7 +399,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "m = folium.Map(location=[37, 14], zoom_start=6, tiles=None)\n",
+    "m = folium.Map(location=[centre_lat, centre_long], zoom_start=6, tiles=None)\n",
     "\n",
     "folium.raster_layers.WmsTileLayer(\n",
     "    url=\"https://a.tiles.maps.eox.at\",\n",
@@ -423,7 +416,7 @@
     "    transparent=True,\n",
     "    overlay=True,\n",
     "    control=True,\n",
-    "    time=\"2019-09-02T00:00:00Z/2019-09-04T00:00:00Z\",\n",
+    "    time=\"2019-09-10T00:00:00Z/2019-09-11T00:00:00Z\",\n",
     ").add_to(m)\n",
     "\n",
     "\n",
@@ -465,8 +458,6 @@
     "        tree = lxml.etree.fromstring(requests.get(link['url']).content)\n",
     "        break\n",
     "\n",
-    "        \n",
-    "\n",
     "coverage_ids = tree.xpath('wcs:CoverageDescriptions/wcs:CoverageDescription/@gml:id', namespaces=tree.nsmap)\n",
     "coverage_ids"
    ]
@@ -485,26 +476,6 @@
     "content = response.content\n",
     "img1 = plt.imshow(imread(BytesIO(content)),extent=[23.4,24.5,37.8,38.8],aspect='auto')\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e1e795d5-eecd-4617-a0b8-97e39a99405c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wcs = WebCoverageService(wcs_endpoint, version='2.0.1')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e5a54b99-e1b6-46c3-be55-02f28b7a30a6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "wcs.contents.keys()"
    ]
   }
  ],
