Align notebooks with eoepca release v1.4

--- a/demoroot/notebooks/02 Processing.ipynb
+++ b/demoroot/notebooks/02 Processing.ipynb
@@ -132,7 +132,7 @@
    "outputs": [],
    "source": [
     "workspace_url = \"https://workspace-api.\" + base_domain\n",
-    "workspace_prefix = \"ws-\""
+    "workspace_prefix = \"ws\""
    ]
   },
   {
@@ -154,7 +154,7 @@
    "outputs": [],
    "source": [
     "# Workspace - Get Details\n",
-    "workspace_name =  workspace_prefix + USER_NAME.lower()\n",
+    "workspace_name = f\"{workspace_prefix}-{USER_NAME.lower()}\"\n",
     "\n",
     "headers = {\n",
     "    \"Accept\": \"application/json\",\n",
@@ -713,7 +713,7 @@
     "jobs_list = response.json()\n",
     "print(f\"Listing {jobs_list['numberTotal']} jobs...\")\n",
     "for job in jobs_list[\"jobs\"]:\n",
-    "    print(f\"  {job['jobID']} - {job['processID']}\")"
+    "    print(f\"  {job.get('finished', '???'):^24} - {job['jobID']} - {job['status']:<12} - {job['processID']}\")"
    ]
   },
   {
