--- a/demoroot/notebooks/02 Processing.ipynb
+++ b/demoroot/notebooks/02 Processing.ipynb
@@ -18,7 +18,6 @@
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "import utils.DemoClient as client\n",
     "import jwt\n",
     "import json\n",
     "from owslib.csw import CatalogueServiceWeb\n",
@@ -793,7 +792,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -807,7 +806,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
