--- a/demoroot/notebooks/06 Workspace Management.ipynb
+++ b/demoroot/notebooks/06 Workspace Management.ipynb
@@ -36,8 +36,6 @@
    "outputs": [],
    "source": [
     "base_domain = \"develop.eoepca.org\"\n",
-    "# base_domain = \"develop.eoepca.org\"\n",
-    "#workspaces_endpoint = f'https://workspace-api-open.{base_domain}/workspaces'\n",
     "workspaces_endpoint = f'https://workspace-api.{base_domain}/workspaces'"
    ]
   },
@@ -201,7 +199,7 @@
    "source": [
     "import time\n",
     "# wait for provisioning\n",
-    "time.sleep(10)"
+    "time.sleep(20)"
    ]
   },
   {
@@ -606,7 +604,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -620,7 +618,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.11.9"
   },
   "vscode": {
    "interpreter": {
