Update Resource Catalogue notebook

--- a/demoroot/notebooks/04 Resource Catalogue.ipynb
+++ b/demoroot/notebooks/04 Resource Catalogue.ipynb
@@ -731,7 +731,10 @@
     "#-------------------------------------------------------------------------------\n",
     "USER_ALICE=\"alice\"\n",
     "USER_ALICE_PASSWORD=\"changeme\"\n",
-    "alice_access_token = get_user_token(USER_ALICE, USER_ALICE_PASSWORD)"
+    "alice_access_token = get_user_token(USER_ALICE, USER_ALICE_PASSWORD)\n",
+    "headers = {\n",
+    "    'Authorization': 'Bearer ' + alice_access_token\n",
+    "}"
    ]
   },
   {
@@ -843,18 +846,6 @@
    "metadata": {},
    "source": [
     "Setting up the authentication headers"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "362b4dc7-d4b4-4922-ac70-3c46812ed18e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "headers = {\n",
-    "    'Authorization': 'Bearer ' + alice_access_token\n",
-    "}"
    ]
   },
   {
