Cleanup old notebooks

--- a/demoroot/notebooks/01 User Management Keycloak.ipynb
+++ b/demoroot/notebooks/01 User Management Keycloak.ipynb
@@ -31,11 +31,11 @@
     "\n",
     "urllib3.disable_warnings()\n",
     "\n",
-    "base_domain = \"192-168-49-2.nip.io\"\n",
-    "keycloak_url = f\"http://keycloak.{base_domain}\"\n",
+    "base_domain = \"develop.eoepca.org\"\n",
+    "keycloak_url = f\"https://keycloak.{base_domain}\"\n",
     "realm = \"master\"\n",
-    "dummy_service_url = f\"http://dummy-service.{base_domain}\"\n",
-    "identity_api_url = f\"http://identity-api.{base_domain}\""
+    "dummy_service_url = f\"https://dummy-service.{base_domain}\"\n",
+    "identity_api_url = f\"https://identity-api.{base_domain}\""
    ]
   },
   {
@@ -1403,69 +1403,11 @@
     "print(response.status_code)\n",
     "print(json.dumps(response.json(), indent=2))"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "47537fc25108b375",
-   "metadata": {},
-   "source": [
-    "## Bash Script\n",
-    "\n",
-    "TODO - this won't work due to other dependencies needing to be fetched and installed.\n",
-    "\n",
-    "Execute script to create a client with protected resources"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "632f4cc7f6699dfe",
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
-   "outputs": [],
-   "source": [
-    "import subprocess\n",
-    "import urllib.request\n",
-    "\n",
-    "with urllib.request.urlopen(\n",
-    "        \"https://raw.githubusercontent.com/EOEPCA/deployment-guide/main/deploy/bin/create-client\") as f:\n",
-    "    script = f.read().decode('utf-8')\n",
-    "    out = open(\"create-client\", \"w\")\n",
-    "    out.write(script)\n",
-    "    out.flush()\n",
-    "\n",
-    "access_token = keycloak.get_user_token(\"admin\", admin_password)[\"access_token\"]\n",
-    "\n",
-    "script_args = [\n",
-    "    \"bash\",\n",
-    "    \"create-client\",\n",
-    "    \"-a\", keycloak_url,\n",
-    "    \"-i\", identity_api_url,\n",
-    "    \"-r\", realm,\n",
-    "    \"-u\", \"admin\",\n",
-    "    \"-p\", admin_password,\n",
-    "    \"-c\", \"admin-cli\",\n",
-    "    \"--id=test-client\",\n",
-    "    \"--name='Test Client'\",\n",
-    "    \"--secret=changeme\",\n",
-    "    \"--description='Test client from demo notebook'\",\n",
-    "    \"--resource='Eric Space'\", \"--uris='/ericspace/*'\", \"--scopes=view\", \"--users=eric\",\n",
-    "    \"--resource='Alice Space'\", \"--uris='/alicespace/*'\", \"--scopes=view\", \"--users=alice\"\n",
-    "]\n",
-    "print(\"Executing script:\\n\" + ' '.join(script_args) + '\\n')\n",
-    "\n",
-    "# r = subprocess.run(script_args, shell=True, text=True, capture_output=True)\n",
-    "# print(r)"
-   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1479,7 +1421,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
