Fixes for v1x service deployment

--- a/demoroot/notebooks/01 User Management Keycloak.ipynb
+++ b/demoroot/notebooks/01 User Management Keycloak.ipynb
@@ -32,9 +32,9 @@
     "urllib3.disable_warnings()\n",
     "\n",
     "base_domain = \"develop.eoepca.org\"\n",
-    "keycloak_url = f\"https://keycloak.{base_domain}\"\n",
+    "keycloak_url = f\"https://keycloak-v1x.{base_domain}\"\n",
     "realm = \"master\"\n",
-    "dummy_service_url = f\"https://dummy-service.{base_domain}\"\n",
+    "dummy_service_url = f\"https://dummy-service-v1x.{base_domain}\"\n",
     "identity_api_url = f\"https://identity-api.{base_domain}\""
    ]
   },
