--- a/demoroot/notebooks/05 Workspace Management.ipynb
+++ b/demoroot/notebooks/05 Workspace Management.ipynb
@@ -60,7 +60,7 @@
     "import requests\n",
     "\n",
     "realm = \"master\"\n",
-    "keycloak = f\"https://keycloak.{base_domain}\"\n",
+    "keycloak = f\"https://keycloak-v1x.{base_domain}\"\n",
     "token_endpoint = f\"{keycloak}/realms/{realm}/protocol/openid-connect/token\"\n",
     "client_id = \"admin-cli\"\n",
     "client_secret = \"changeme\"\n",
@@ -82,6 +82,7 @@
     "    if response.ok:\n",
     "        return response.json()[\"access_token\"]\n",
     "    else:\n",
+    "        print(response)\n",
     "        return None"
    ]
   },
